project/RetoFit/RETOFIT_2.0/k8s/05-network-policies/allow-external-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external-db
  labels:
    app: retofit
spec:
  podSelector:
    matchLabels:
      tier: backend
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
        - 172.16.0.0/12
        - 192.168.0.0/16
    ports:
    - protocol: TCP
      port: 5432      # PostgreSQL (AWS RDS)
    - protocol: TCP
      port: 10201     # MongoDB (Railway)
